fix collapsed margins

--- a/asterism/style.css
+++ b/asterism/style.css
@@ -33,7 +33,6 @@ nav {
 nav header {
   text-align: center;
   letter-spacing: 10px;
-  margin-top: 5%;
 }
 
 nav ul {
@@ -45,7 +44,6 @@ nav ul li {
   text-align: center;
   list-style: none;
   box-sizing: border-box;
-  margin-top: 2%;
   margin-bottom: 2%;
 }
 
@@ -54,6 +52,7 @@ nav ul li {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 1px;
 }
 
 .container .featured-post {
@@ -132,10 +131,12 @@ nav ul li {
 .divider {
   width: 100%;
   border-bottom: 0.5px solid black;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
 }
+.posts .post {
 
+}
 .posts .post img {
   width: 100%;
   max-width: 100%;
@@ -144,10 +145,13 @@ nav ul li {
 
 .posts .post .divider {
   border-bottom-color: gray;
+  margin-bottom: 3%;
+  margin-top: 0;
 }
 .posts .post .post-title {
   font-size: 1.2em;
   font-weight: bold;
+  margin-bottom: 3%;
 }
 
 .posts .post .post-desc {
@@ -194,7 +198,6 @@ nav ul li {
 }
 
 .widget.sub button {
-  margin-top: 5%;
   height: 5%;
   width: 100%;
 }
